Added next level form html and scripts but not yet executing- need to debug now

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,13 @@
 
 body {
   background-color: lightblue;
+  font-size: 18px;
+  font-family: monospace;
 }
 
 h3 {
-  font-family: ;
-
+  color: maroon;
+  font-weight: bold;
 }
 
 img {
@@ -24,5 +26,9 @@ img {
 }
 
 #frontEnd {
+  display: none;
+}
+
+#languageSuggested {
   display: none;
 }
