--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,8 @@
-.jumbotron {
-  text-align: center;
-  font-family: monospace;
-  background-color: black;
-  color: white;
-}
-
 body {
-  background-color: lightblue;
+  background-image: url(../img/hdwall.jpg);
   font-size: 18px;
   font-family: monospace;
+  font-weight: bold;
 }
 
 h3 {
@@ -17,6 +11,54 @@ h3 {
 }
 
 img {
+  /*width: 100%;
+  height: 100%*/
+}
+
+a {
+  color: blue;
+  font-weight: bolder;
+  text-decoration: underline;
+}
+
+footer {
+  padding-left: 70px;
+}
+
+span {
+  text-align: center;
+  color: maroon;
+}
+
+.jumbotron {
+  text-align: center;
+  font-family: monospace;
+  font-weight: bold;
+  /*background-image: url(../img/blueline.jpg);*/
+  background-color: #00004d;
+  color: white;
+}
+
+.row {
+padding: 20px;
+/*background-image: url(../img/bluewater.jpg);*/
+background-color: #99ccff;
+}
+
+.btn {
+  cursor: pointer;
+  color: #0088cc;
+  font-weight: bolder;
+  font-size: 20px;
+}
+
+.btn:hover {
+  text-decoration: underline;
+  background-color: blue;
+  color: white;
+}
+
+#frontendpic {
   width: 100%;
   height: 300px;
 }
@@ -31,13 +73,4 @@ img {
 
 #decision {
   display: none;
-}
-
-footer {
-  padding-left: 70px;
-}
-
-span {
-  text-align: center;
-  color: maroon;
 }
