--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,12 @@
 body {
   background-image: url(../img/hdwall.jpg);
+  background-size: cover;
   font-size: 18px;
   font-family: monospace;
+  font-weight: bold;
+}
+
+h2 {
   font-weight: bold;
 }
 
@@ -10,15 +15,13 @@ h3 {
   font-weight: bold;
 }
 
-img {
-  /*width: 100%;
-  height: 100%*/
-}
-
 a {
   color: blue;
   font-weight: bolder;
   text-decoration: underline;
+}
+img {
+  width: 200%;
 }
 
 footer {
@@ -27,21 +30,23 @@ footer {
 
 span {
   text-align: center;
-  color: maroon;
+  color: red;
+  font-weight: bold;
 }
 
 .jumbotron {
   text-align: center;
   font-family: monospace;
   font-weight: bold;
-  /*background-image: url(../img/blueline.jpg);*/
-  background-color: #00004d;
+  background-image: url(../img/blueline.jpg);
+  background-size: cover;
   color: white;
 }
 
 .row {
-padding: 20px;
-/*background-image: url(../img/bluewater.jpg);*/
+padding: 10px;
+/*background-image: url(../img/bluewater2.jpg);
+background-size: cover;*/
 background-color: #99ccff;
 }
 
