--- a/css/styles.css
+++ b/css/styles.css
@@ -45,8 +45,6 @@ span {
 
 .row {
 padding: 10px;
-/*background-image: url(../img/bluewater2.jpg);
-background-size: cover;*/
 background-color: #99ccff;
 }
 
@@ -66,6 +64,13 @@ background-color: #99ccff;
 #frontendpic {
   width: 100%;
   height: 300px;
+}
+
+#mainpagepic {
+  width: 100%;
+  height: 400px;
+  padding-top: 20px;
+  background-size: cover;
 }
 
 #backEnd {
